# mosaic

./: .coveragerc  .dockerignore  .ga  .gitignore  .htaccess  .settings  .travis.yml  CHANGELOG.rst  DISCLAIMER.TXT  Dockerfile  LICENSE.TXT  LICENSE.md  LICENSE.rst  MANIFEST  MANIFEST.in  Makefile  README.TXT  README.rst  SingleChannelAnalysis.py  abf2TrajIO.py  abfTrajIO.py  beta.html  binTrajIO.py  convert_notebooks.py  convolutionFilter.py  docker-compose.yml  download.html  download.py  eventSegment.py  generate_sitemap.py  generate_update_file.py  index.html  index.offline.html  install-test-sh  make.bat  metaEventPartition.py  metaEventProcessor.py  metaIOFilter.py  metaTrajIO.py  mosaic.js  (+31 more)
.scripts/: build-deps-sh  build-docs-deps-sh  buildMOSAICbin-sh  create_osx_icons.sh  icon.icns  install-addons-sh  install-igor-addons-sh  pyinstaller-sh
Testing/: UnitTestData.nb  run-tests-sh  testAlgos.py  testutil.py
abf/: abf.py  abf2load_gp.py  abfload.py
assets/: app.css
data/: .settings  README.rst  SingleChan-0001_state.txt  eventMD-PEG28-ADEPT2State.sqlite  eventMD-PEG28-Reference.sqlite  eventMD-PEG28-cusumLevelAnalysis.sqlite  eventMD-PEG28-stepResponseAnalysis.sqlite  eventMD-PEG29-Reference.sqlite
dependencies/: build-deps-sh
doc-sphinx/: Makefile  conf.py  index.rst  make.bat
examples/: binaryConvert.ipynb  channelGating.ipynb  mosaicPlot.ipynb
html/: .buildinfo  aliases.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sitemap.xml
mathematica/: AnalyzeEvents.nb  MathInterface.m  MathInterface.nb  nanoporeAnalysis.m  nanoporeAnalysis.nb  runAnalysis.sh
mosaic/: ConvertToCSV.py  SingleChannelAnalysis.py  __init__.py  _global.py  _global.py.bak  _version.py  abfTrajIO.py  adept.py  adept2State.py  besselLowpassFilter.py  binTrajIO.py  chimeraTrajIO.py  commonExceptions.py  convolutionFilter.py  cusumLevelAnalysis.py  cusumPlus.py  errors.py  eventSegment.py  global.json  metaEventPartition.py  metaEventProcessor.py  metaIOFilter.py  metaMDIO.py  metaTrajIO.py  mosaicSetup.py  multiStateAnalysis.py  pproc.py  qdfTrajIO.py  qdfUtils.py  readGlobalSettings.py  settings.py  sigproc.py  singleStepEvent.py  sqlite3MDIO.py  stepResponseAnalysis.py  tsvTrajIO.py  waveletDenoiseFilter.py  zmqIO.py  zmqWorker.py
mosaicgui/: AnalysisSettings.py  EBSStateFileDict.py  analysisWorker.py  autocompleteedit.py  datamodel.py  datapathedit.py  mosaicGUI.py  mosaicSyntaxHighlight.py  mplwidget.py  redirectSTDOUT.py  run.py  settingsview.py  sqlQueryWorker.py  updateService.py
mosaicscripts/: Contour Plots.ipynb  HistogramPlots.ipynb  README.rst  Timeseries Plots.ipynb
mosaicweb/: run.py  runTests.py  setup.py  (+1 more)
(+740 files in other folders)
