[metadata]
project_urls =
    Bug Tracker = https://github.com/usnistgov/mosaic/issues
description='A Modular Single-Molecule Analysis Interface.'
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[nosetests]
detailed-errors=1
verbosity=2
with-coverage=1
cover-package=mosaic, mosaicweb 
