[metadata]
name = mosaic-nist
version = 2.4
author = National Institute of Standards and Technology (NIST)
author_email = arvind.balijepalli@nist.gov
maintainer = Arvind Balijepalli
maintainer_email = arvind.balijepalli@nist.gov
url = https://pages.nist.gov/mosaic/
license = US Government Open Source
project_urls =
    Bug Tracker = https://github.com/usnistgov/mosaic/issues
description = A Modular Single-Molecule Analysis Interface.
long_description_content_type = text/x-rst
long_description = file: README.rst, CHANGELOG.rst
platforms = MacOS, Windows, Linux
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords = nanopore timeseries single-molecule data-analysis

[options]
python_requires = >=3.8
install_requires =
    cython==0.29.32
    pandas==1.5.2
    lmfit==1.1.0
    uncertainties==3.1.7
    PyWavelets==1.4.1
    pytest==7.2.2
    coverage==6.5.0
    codecov==2.1.12
    pytest-cov==4.0.0
    pyinstaller==5.6.2
    numpy==1.23.5
    scipy==1.10.0
    pyabf==2.3.7
    docutils==0.19
    flask==2.3.2
    gunicorn==20.1.0
packages =
    mosaic
    mosaic.filters
    mosaic.mdio
    mosaic.trajio
    mosaic.process
    mosaic.partition
    mosaic.apps
    mosaic.tests
    mosaic.trajio.qdf
    mosaic.trajio.abf
    mosaic.utilities
    mosaicweb
    mosaicweb.mosaicAnalysis
    mosaicweb.plotlyUtils
    mosaicweb.sessionManager
    mosaicweb.utils
scripts =
    bin/analysis.py
    addons/mathematica/MosaicAnalysis.m
    addons/mathematica/MosaicUtils.m
    addons/mathematica/Util.m
    addons/MATLAB/openandquery.m
    .scripts/install-addons-sh
    .scripts/pyinstaller-sh
    commit-hash
    version-hash
    mweb-version-hash
    requirements.txt
    DISCLAIMER.TXT
    README.rst
    CHANGELOG.rst
    LICENSE.rst

[options.extras_require]
test =
    pytest
    pytest-cov
    coverage

[options.package_data]
icons =
    'icons/icon_100px.png'
    'icons/error-128.png'
    'icons/warning-128.png'
data =
    'data/eventMD-PEG28-ADEPT2State.sqlite'
    'data/.settings', 'data/SingleChan-0001.qdf'
    'data/SingleChan-0001_state.txt'
